<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_first"
            android:icon="@mipmap/icon_like"
            android:title="@string/first_item_title" />
        <item
            android:id="@+id/nav_second"
            android:icon="@mipmap/icon_user_talking"
            android:title="@string/second_item_title" />
        <item
            android:id="@+id/nav_third"
            android:icon="@mipmap/icon_sale"
            android:title="@string/third_item_title" />
        <item
            android:id="@+id/nav_fourth"
            android:icon="@mipmap/icon_star"
            android:title="@string/fourth_item_title" />
        <item
            android:id="@+id/nav_fifth"
            android:icon="@mipmap/icon_star"
            android:title="@string/fifth_item_title" />
    </group>
</menu>